testsuite/tests/th/TH_cvt_GadtNoCons.stderr
TH_cvt_GadtNoCons.hs:7:2: error: [GHC-38140]
    ‘GadtC’ must have at least one constructor name
    When splicing a TH declaration: data T where :: T

